--- a/style.css
+++ b/style.css
@@ -4,16 +4,16 @@
 }
 
 .cabecalho {
-    background-color: #424E61;
+    background-color:#807E7A;
     color: white;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 24px 0;
+    padding: 20px 0;
 }
 
 .cabecalho-imagem{
-    width: 20%;
+    width: 50%;
 }
 
 .cabecalho-lista-item{
