--- a/style.css
+++ b/style.css
@@ -21,3 +21,12 @@
     margin: 0 16px;
     font-size: 24px;
 }
+
+.escola-imagem{
+    width: 30%
+
+}
+body{
+    background-image: linear-gradient(#594E3C, #b6b498);
+
+}
